Corrected until conclusion. Haven't yet look at making the conclusion better or correcting the references. I think that a few are having some issues.

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12617,6 +12617,13 @@ publisher = {Oxford University Press}
 }
 
 
+@Book{schroeder:01,
+  title={The Visualization Toolkit-User’s Guide},
+  author={Schroeder, William J and Avila, Lisa S and Martin, Kenneth M and Hoffman, WILLIAM A and Law, C Charles},
+  publisher={Kitware, Inc},
+  year={2001}
+}
+
 @article{yeatman2012afq,
     author = {Yeatman, , Jason D. AND Dougherty, , Robert F. AND Myall, , Nathaniel J. AND Wandell, , Brian A. AND Feldman, , Heidi M.},
     journal = {PLoS ONE},
