Started reshaping the conclusion

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1346,20 +1346,18 @@ slicer & actor for showing volumetric slices \\
 \end{tabular}}{}
 \end{table}
 
-\section{Discussion/Conclusion}
+\section{Conclusion}
 
 We have outlined the structure and functionality of the Dipy library
 which provides a toolbox for the analysis of diffusion MRI data. Dipy is
-open source software, written in the Python language, and is part of the Neuroimaging in Python 
-(Nipy \url{nipy.org}), a growing
-community of scientists and developers. 
+free and open source software, written in the Python language, and is part 
+of a larger community knows as \url{nipy.org}. This is a growing
+team of scientists and developers focusing on sharing code on different modalities
+of brain imaging. 
 In common with the other Nipy projects, Dipy is being developed under the
-umbrella of a single github organization (\url{github.com/nipy}) and the central
-Dipy github repository is managed under this organization
-(\url{github.com/nipy/dipy}).  The community provides support for the use and
-development of these software tools through a mailing list
-(\url{dipy.org/subscribe.html}), and this mailing
-list is also a good place to discuss other Python-/neuroimaging-related issues.
+umbrella of a single github organization\footnote{\url{http://github.com/nipy}} and the central
+Dipy github repository is managed under this organization\footnote{\url{http://github.com/nipy/dipy}}).  The community provides support for the use and
+development of these software tools through a mailing list\footnote{\url{dipy.org/subscribe.html}}, and this mailing list is also a good place to discuss other Python and neuroimaging related issues.
 
 Github is widely recognized as a factor in lowering the barriers on
 participation in open-source software development [REF?]. In combination with
