--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1348,27 +1348,30 @@ slicer & actor for showing volumetric slices \\
 
 \section{Conclusion}
 
-We have outlined the structure and functionality of the Dipy library
-which provides a toolbox for the analysis of diffusion MRI data. Dipy is
-free and open source software, written in the Python language, and is part 
-of a larger community knows as \url{nipy.org}. This is a growing
-team of scientists and developers focusing on sharing code on different modalities
-of brain imaging. 
-In common with the other Nipy projects, Dipy is being developed under the
+In this paper, we have outlined the structure and functionality of the Dipy library,
+which provides a number of simple methods to use for the analysis of diffusion MRI data using the Python
+language. We demonstrated examples of pre-processing, reconstruction, tracking and post-processing,
+showing that Dipy, although a new project, can fill many of the steps needed to do a complete 
+dMRI analysis.
+
+Dipy is free and open source software and it is part of a larger community found in \url{nipy.org}. 
+This is a growing team of scientists and developers focusing on sharing code concerning different modalities
+of brain imaging. In common with the other Nipy projects, Dipy is being developed under the
 umbrella of a single github organization\footnote{\url{http://github.com/nipy}} and the central
-Dipy github repository is managed under this organization\footnote{\url{http://github.com/nipy/dipy}}).  The community provides support for the use and
-development of these software tools through a mailing list\footnote{\url{dipy.org/subscribe.html}}, and this mailing list is also a good place to discuss other Python and neuroimaging related issues.
+Dipy github repository is managed under this organization\footnote{\url{http://github.com/nipy/dipy}}).
+The community provides support for the use and development of these software tools through 
+the project's mailing list\footnote{\url{http://dipy.org/subscribe.html}}.
 
 Github is widely recognized as a factor in lowering the barriers on
-participation in open-source software development [REF?]. In combination with
+participation in open-source software development. In combination with
 the principles of the Nipy community, this has led to a vibrant and diverse
 developer community. In contrast to many other software projects in
 neuroimaging, Dipy is not based on the work of one lab, or one institution. Though
 many of the contributions are made by a few core contributors, there are many
 contributors to the code-base and the number of contributors has been growing
-dramatically after the April 2013 release of version 0.6 of the software
-~\ref{Fig:gh_stats}, with contributors based in at least 7 different academic
-institutions in 5 countries (Canada, UK, USA, Italy and South-Africa).
+dramatically after the 0.6 which took place on April 2013 ~\ref{Fig:gh_stats}, 
+with contributors based in at least 7 different academic
+institutions in 5 countries (Canada, UK, USA, Italy and South Africa).
 
 \begin{figure}
 \centering{}
@@ -1378,12 +1381,13 @@ institutions in 5 countries (Canada, UK, USA, Italy and South-Africa).
   new contributors have joined the project after the 0.6 release\label{Fig:gh_stats}}
 \end{figure}
 
-An additional major source of support for this community comes in the form of the
-Neurodebian distribution \citep{Halchenko2012}. Neurodebian is a platform for
-maintenance and deployment of software for the analysis of neuroscience data,
-based on free open source software (FOSS) practices. It currenly supports the
-distribution of XXX different software libraries , including many widely used
-software libraries (e.g FSL) and all of the constituents of the nipy community.
+Ultimately, this paper shares with you our excitement of developing Dipy and welcomes 
+you to participate in the project. We strongly hope that more scientists will join 
+Dipy by using the software, giving us feedback so that we can make it better, 
+or even better by sharing their code and joining the developers team. We think that 
+in order to solve the hard problem of brain mapping a wide and open participation is 
+absolutely necessary. 
+
 
 \section*{Acknowledgments}
 One major source of support for this community comes in the form of the Neurodebian
